--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,18 +1,12 @@
+
+@media screen and (min-width: 1440px) {
 .container {
-    /* background-image: url('./../../assets/backgr2.jpg');
-    background-size: 100% 100%; */
+    
   padding: 0 50px;
     margin: 0 auto;
-	/* overflow: hidden; */
     max-width: 1440px;
-    height: auto;
-    box-shadow: 
-    0 0 5px rgba(240, 237, 237, 0.1),
-    0 0 10px rgba(240, 237, 237, 0.1),
-    0 0 20px rgba(240, 237, 237, 0.1),
-    0 0 40px rgba(240, 237, 237, 0.1),
-    0 0 80px rgba(240, 237, 237, 0.1);
-
+    position: relative;
+    z-index: 10;
      opacity: 0;
     transform: scale(0.5);
     animation: slide-down 1s forwards;
@@ -36,4 +30,5 @@
         opacity: 1;
         transform: translateY(0); 
     }
+}
 }
