--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,25 @@
 
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
- background: black;
-            background-size: 300% 300%;
-  font-family:'Josefin Sans Variable', sans-serif;
-color: #ffffff; 
-  font-weight: 400;
-  width: 100%;
-  height: 100%;
+
   margin: 0;
-  overflow: auto;
+  padding: 0;
+  font-family:'Josefin Sans Variable', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #ffffff;
+  background: black;
+
 }
 body::-webkit-scrollbar {
     width: 0px;
