--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -8,11 +8,7 @@
 }
 
 
- h2.fifthFrame {
-	-webkit-animation: none;
-	-moz-animation: none;
-	-ms-animation: none;
-	animation: none;
+ h2 {
 	color: transparent;
 text-shadow: 0px 0px 1px #fff;
 font-size: 40px;
@@ -35,15 +31,6 @@ font-size: 40px;
     transition: all 0.3s;
     width: auto;
     height: auto;
-    -webkit-animation: fadeInRotate 0,5s linear 1s backwards;
-	-moz-animation: fadeInRotate 0.5s linear 1s backwards;
-	-ms-animation: fadeInRotate 0.5s linear 1s backwards;
-	animation: fadeInRotate 0.5s linear 1s backwards;
-	-webkit-transform: scale(1) rotate(0deg);
-	-moz-transform: scale(1) rotate(0deg);
-	-o-transform: scale(1) rotate(0deg);
-	-ms-transform: scale(1) rotate(0deg);
-	transform: scale(1) rotate(0deg);
 }
 
   
@@ -125,180 +112,7 @@ font-size: 40px;
             }
         }
 
-@-webkit-keyframes blurFadeInOut {
-	0% {
-		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
-		-webkit-transform: scale(1.3);
 		
-	}
-	20%, 75% {
-		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
-		-webkit-transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		text-shadow: 0px 0px 50px #fff;
-		-webkit-transform: scale(0);
-	}
-}
-@-webkit-keyframes blurFadeIn {
-	0% {
-		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
-		-webkit-transform: scale(1.3);
-	}
-	50% {
-		opacity: 0.5;
-		text-shadow: 0px 0px 10px #fff;
-		-webkit-transform: scale(1.1);
-	}
-	100% {
-		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
-		-webkit-transform: scale(1);
-	}
-}
-@-webkit-keyframes fadeInBack {
-	0% {
-		opacity: 0;
-		-webkit-transform: scale(0);
-	}
-	50% {
-		opacity: 0.4;
-		-webkit-transform: scale(2);
-	}
-	100% {
-		opacity: 0.2;
-		-webkit-transform: scale(5);
-	}
-}
-@-webkit-keyframes fadeInRotate {
-	0% {
-		opacity: 0;
-		-webkit-transform: scale(0) rotate(360deg);
-	}
-	100% {
-		opacity: 1;
-		-webkit-transform: scale(1) rotate(0deg);
-	}
-}
-/**/
-
-@-moz-keyframes blurFadeInOut {
-	0% {
-		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
-		-moz-transform: scale(1.3);
-	}
-	20%, 75% {
-		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
-		-moz-transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		text-shadow: 0px 0px 50px #fff;
-		-moz-transform: scale(0);
-	}
-}
-@-moz-keyframes blurFadeIn {
-	0% {
-		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
-		-moz-transform: scale(1.3);
-	}
-	100% {
-		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
-		-moz-transform: scale(1);
-	}
-}
-@-moz-keyframes fadeInBack {
-	0% {
-		opacity: 0;
-		-moz-transform: scale(0);
-	}
-	50% {
-		opacity: 0.4;
-		-moz-transform: scale(2);
-	}
-	100% {
-		opacity: 0.2;
-		-moz-transform: scale(5);
-	}
-}
-@-moz-keyframes fadeInRotate {
-	0% {
-		opacity: 0;
-		-moz-transform: scale(0) rotate(360deg);
-	}
-	100% {
-		opacity: 1;
-		-moz-transform: scale(1) rotate(0deg);
-	}
-}
-/**/
-
-@keyframes blurFadeInOut {
-	0% {
-		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
-		transform: scale(1.3);
-	}
-	20%, 75% {
-		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
-		transform: scale(1);
-	}
-	100% {
-		opacity: 0;
-		text-shadow: 0px 0px 50px #fff;
-		transform: scale(0);
-	}
-}
-@keyframes blurFadeIn {
-	0% {
-		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
-		transform: scale(1.3);
-	}
-	50% {
-		opacity: 0.5;
-		text-shadow: 0px 0px 10px #fff;
-		transform: scale(1.1);
-	}
-	100% {
-		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
-		transform: scale(1);
-	}
-}
-@keyframes fadeInBack {
-	0% {
-		opacity: 0;
-		transform: scale(0);
-	}
-	50% {
-		opacity: 0.4;
-		transform: scale(2);
-	}
-	100% {
-		opacity: 0.2;
-		transform: scale(5);
-	}
-}
-@keyframes fadeInRotate {
-	0% {
-		opacity: 0;
-		transform: scale(0) rotate(360deg);
-	}
-	100% {
-		opacity: 1;
-		transform: scale(1) rotate(0deg);
-	}
-}
 
 
 
