--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -29,8 +29,8 @@ font-size: 40px;
     border: 1px solid #ffffff;
     cursor: pointer; 
     color: #ffffff;
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 15px;
+    font-weight: 400;
     transition: all 0.3s;
     width: auto;
     height: auto;
@@ -43,8 +43,20 @@ font-size: 40px;
     justify-content: center;
     align-items: center;
     gap: 50px;
-    margin: 50px auto;
+    margin: 0px auto;
 }
+
+@keyframes slideInFromRight {
+            0% {
+                transform: translateX(100%);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
 .projectItem {
     display: flex;
     align-items: center;
@@ -52,16 +64,36 @@ font-size: 40px;
     text-align: center;
     gap: 30px;
     margin-bottom: 50px;
-	
+    animation: slideInFromRight 2s forwards;
 }
 
+@keyframes slideInFromLeft {
+            0% {
+                transform: translateX(-100%);
+                opacity: 0;
+            }
+            100% {
+                transform: translateX(0);
+                opacity: 1;
+            }
+        }
+
+        .projectItemLeft {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 30px;
+    margin-bottom: 50px;
+    animation: slideInFromLeft 2s forwards;
+}
 
 .active {
-   font-size: 45px;
+   font-size: 35px;
     font-weight: 700;
 }
 
-.projectItem:hover  {
+.projectItem:hover, .projectItemLeft:hover  {
   animation: left-edge 0.5s linear 1;
   border-radius: 10px;
 }
@@ -83,7 +115,7 @@ font-size: 40px;
 
 .typing {
   color: #ffffff;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   text-align: center;
   margin-bottom: 100px;
