--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -11,13 +11,13 @@
 }
 
 
- h2 {
+.fifthFrame {
 	color: transparent;
 text-shadow: 0px 0px 1px #fff;
 font-size: 40px;
     font-weight: 600;
     margin-bottom: 100px;
-	margin-top: 100px;
+	margin-top: 50px;
 }
 
 
@@ -115,10 +115,8 @@ font-size: 40px;
 
 .typing {
   color: #ffffff;
-  font-size: 20px;
-  font-weight: 600;
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
    opacity: 0;
     transform: translateY(100px);
     animation: slide-up 1s 2s forwards;
