--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -26,8 +26,8 @@ height: 170px;
 
 .contacts {
     content: "";
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     background-color: #ffffff;
     border-radius: 50%;
     margin-right: 5px;
@@ -47,8 +47,8 @@ height: 170px;
 
 .icon {
     fill: #0736a4;
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     animation: pulse 1.5s infinite;
    
 }
@@ -68,7 +68,7 @@ height: 170px;
   animation: neonRainbow 1.5s infinite alternate;
 }
 
-@keyframes neonRainbow {
+/* @keyframes neonRainbow {
   0% {
     box-shadow: 0 0 5px #ff0099, 0 0 10px #ff0099, 0 0 15px #ff0099, 0 0 20px #ff0099, 0 0 25px #ff0099;
   }
@@ -87,4 +87,4 @@ height: 170px;
   100% {
     box-shadow: 0 0 5px #3399ff, 0 0 10px #3399ff, 0 0 15px #3399ff, 0 0 20px #3399ff, 0 0 25px #3399ff;
   }
-}
+} */
