--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -3,7 +3,7 @@
 
 .wrapper {
     height: auto;
-    padding: 50px;
+    padding: 50px 50px 150px 50px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -22,18 +22,19 @@ font-size: 40px;
 
 
 .item {
-   padding: 10px 20px;
+  padding: 10px 20px;
   border-radius: 20px;
   background: linear-gradient(90deg, #000000, #1e1e1e);
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 600;
    font-family: 'Kalam', cursive;
-    border: 1px solid #ffffff;
     cursor: pointer; 
-    color: #ffffff;
-    font-size: 15px;
-    font-weight: 400;
     transition: all 0.3s;
     width: auto;
     height: auto;
+    border: 1px solid rgba(240, 237, 237, 0.1);
+    box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
 }
 
   
@@ -94,8 +95,10 @@ font-size: 40px;
 }
 
 .projectItem:hover, .projectItemLeft:hover  {
-  
-  border-radius: 10px;
+   transform: translateY(-5px) scale(1.05);
+    border-radius: 20px;
+  color: #ffffff;
+  box-shadow: 0 0 20px rgba(72, 70, 70, 0.1), 0 0 30px rgba(240, 237, 237, 0.1);
 }
 
 @keyframes left-edge {
