--- a/src/pages/CamperClubPage/CamperClubPage.module.css
+++ b/src/pages/CamperClubPage/CamperClubPage.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     height: auto;
-    padding: 50px;
+    padding: 50px 0px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -12,15 +12,15 @@
 }
 .titleContainer {
   display: flex;
-  gap: 150px;
+  gap: 90px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   margin-bottom: 50px;
 }
 
 .wrapperRight {
     height: auto;
-    padding: 50px;
+    padding: 50px 0px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -67,7 +67,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 70px;
+    gap: 50px;
     margin: 50px 0px;
 }
 .imgCamper {
@@ -104,6 +104,8 @@
 }
 
 .links {
+  width: auto; 
+    white-space: nowrap;
   text-decoration: underline;
 text-decoration-skip-ink: none;
     font-size: 25px;
