--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -24,7 +24,6 @@
     font-weight: 400;
     margin: 100px 0px;
     color: #ffffff;
-    width: 700px;
      opacity: 0;
     transform: translateY(100px);
     animation: slide-up 1s 1s forwards;
@@ -45,7 +44,7 @@
     
 }
 .title {
-    text-align: center;
+    text-align: start;
     font-size: 40px;
     font-weight: 600;
     margin-bottom: 50px;
@@ -62,8 +61,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 70px;
-    list-style: none;
+    gap: 50px;
     margin: 30px 0;
    padding: 0 80px;
    margin-bottom: 80px;
@@ -102,7 +100,7 @@
   border-radius: 20px;
   background: linear-gradient(90deg, #000000, #1e1e1e);
   color: #ffffff;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 600;
   text-align: center;
   display: inline-block;
