--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -23,11 +23,15 @@ font-size: 40px;
 
 
 .item {
-  padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+  padding: 20px;
   border-radius: 20px;
   background: linear-gradient(90deg, #000000, #1e1e1e);
   color: #ffffff;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 600;
    font-family: 'Kalam', cursive;
     cursor: pointer; 
@@ -152,6 +156,24 @@ font-size: 40px;
             }
         }
 	
+.icon {
+  width: 50px;
+  height: 50px;
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 2;
+  stroke-dasharray: 100; 
+  stroke-dashoffset: 100;
+  transition: stroke-dashoffset 0.3s ease, stroke 0.3s ease;
+}
 
-
+.item:hover .icon {
+  stroke-dashoffset: 0;
+  stroke: #ff6347; 
+}
+.icon path {
+    stroke: #000;
+    stroke-width: 2;
+    fill: none; 
+}
 
