--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -11,6 +11,19 @@
    
 }
 
+.helloSpan {
+  font-size: 65px;
+  font-weight: 700;
+}
+
+.spanName {
+  background: linear-gradient(84deg, #9845e8 0%, #33d2ff 54.95%, #dd5789 100%);
+background-clip: text;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+font-size: 30px;
+    font-weight: 600;
+}
 
         @keyframes slide-up {
     to {
@@ -19,8 +32,8 @@
     }
 }
 .text {
-    text-align: center;
-    font-size: 25px;
+    text-align: left;
+    font-size: 30px;
     font-weight: 400;
     margin: 100px 0px;
     color: #ffffff;
