--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -11,7 +11,7 @@
 }
 
 
-.title {
+/* .title {
 	background-color: rgba(0, 0, 0, 0.729);
     padding: 10px 20px;
   border-radius: 20px;
@@ -19,8 +19,27 @@ font-size: 40px;
     font-weight: 600;
     margin-bottom: 100px;
 	margin-top: 50px;
+} */
+
+@keyframes gradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
+.title {
+  background: linear-gradient(84deg, #9845e8, #33d2ff, #dd5789);
+  background-size: 200% 200%;
+  animation: gradient 4s ease infinite;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding: 10px 20px;
+  border-radius: 20px;
+font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 100px;
+	margin-top: 50px;
+}
 
 .item {
     display: flex;
