--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -73,7 +73,7 @@ font-size: 30px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     gap: 50px;
     margin: 30px 0;
    padding: 0 80px;
