--- a/src/pages/ProjectsPage/ProjectsPage.module.css
+++ b/src/pages/ProjectsPage/ProjectsPage.module.css
@@ -35,9 +35,9 @@ font-size: 40px;
   -webkit-text-fill-color: transparent;
   padding: 10px 20px;
   border-radius: 20px;
-font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 100px;
+font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 70px;
 	margin-top: 50px;
 }
 
@@ -47,27 +47,34 @@ font-size: 40px;
     gap: 10px;
     align-items: center;
   padding: 20px;
-  border-radius: 20px;
-  background: linear-gradient(90deg, #000000, #1e1e1e);
-  color: #ffffff;
-  font-size: 25px;
-  font-weight: 600;
-   font-family: 'Kalam', cursive;
+  background-color: transparent;
+   font-family: 'Roboto', cursive;
     cursor: pointer; 
     transition: all 0.3s;
     width: auto;
     height: auto;
-    border: 1px solid rgba(240, 237, 237, 0.1);
-    box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
+    border: none;
 }
 
+.spanName {
+border-radius: 20px;
+padding: 20px;
+border: 1px solid rgba(240, 237, 237, 0.1);
+    box-shadow: 0 0 10px rgba(240, 237, 237, 0.1);
+     background-color: rgba(0, 0, 0, 0.729);
+    width: auto;
+    height: auto;
+    color: #ffffff;
+  font-size: 25px;
+  font-weight: 600;
+}
   
 .list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
     margin: 0px auto;
 }
 
@@ -113,17 +120,11 @@ font-size: 40px;
     animation: slideInFromLeft 2s forwards;
 }
 
-.active {
+.active .spanName {
    font-size: 35px;
     font-weight: 700;
 }
 
-.projectItem:hover, .projectItemLeft:hover  {
-   transform: translateY(-5px) scale(1.05);
-    border-radius: 20px;
-  color: #ffffff;
-  box-shadow: 0 0 20px rgba(72, 70, 70, 0.1), 0 0 30px rgba(240, 237, 237, 0.1);
-}
 
 @keyframes left-edge {
 	0% {
@@ -175,6 +176,7 @@ font-size: 40px;
                 opacity: 1;
             }
         }
+
 	.svgBgn {
         background-color: black;
          width: 80px;
@@ -185,8 +187,8 @@ align-items: center;
 justify-content: center;
     }
 .icon {
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   fill: none;
   stroke: currentColor;
   stroke-width: 2;
