--- a/src/pages/AboutMe/AboutMe.module.css
+++ b/src/pages/AboutMe/AboutMe.module.css
@@ -7,8 +7,6 @@
     display: flex;
     margin: auto;
    overflow: hidden;
-   
-   
 }
 
 .helloSpan {
@@ -45,7 +43,12 @@ font-size: 30px;
   border-radius: 20px;
     }
 
-    
+    .cloudBgn {
+      width: auto;
+      height: auto;
+      background-color: rgb(0, 0, 0);
+      margin: 0 auto;
+    }
 
 .container {
     display: flex;
@@ -54,7 +57,7 @@ font-size: 30px;
     gap: 100px;
     padding: 0px 50px;
     margin-bottom: 50px;
-    
+    position: relative;
 }
 .title {
     text-align: start;
@@ -83,7 +86,7 @@ font-size: 30px;
     animation: slide-up 1s 1s forwards;
 }
 .photo {
-  width: 350px;
+  width: 250px;
   height: auto;
   box-shadow: 
     0 0 5px rgba(240, 237, 237, 0.1),
