--- a/src/components/Projects/ShowMoreModal/ShowMoreModal.module.css
+++ b/src/components/Projects/ShowMoreModal/ShowMoreModal.module.css
@@ -7,20 +7,26 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-   top: 50%;
+   /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   background-color: rgb(36, 35, 35);
   z-index: 7;
+  text-align: left;
+   width: 982px;
+height: 720px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
+      0 0 20px rgba(240, 237, 237, 0.1),
+      0 0 40px rgba(240, 237, 237, 0.1),
+      0 0 80px rgba(240, 237, 237, 0.1);
+    overflow: auto;
+     /* scrollbar-width: thin; */
+   /* box-sizing: border-box;
+   scroll-behavior: smooth; */
+
 }
 
-
-.imgWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
 
 .closeButton {
     position: absolute;
@@ -35,22 +41,54 @@
     width: 30px;
      height: 30px;
      fill: #ffffff;
-     stroke: #00baff;
    }
 
    .title {
-    text-align: left;
-    font-size: 20px;
+    font-size: 25px;
     margin-bottom: 10px;
 }
 
+
+
+
 .subtitle {
-    font-size: 18px;
+    font-size: 20px;
+     margin-left: 0px;
+    margin-right: auto;
     margin-bottom: 10px;
 }
 .linksList {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+.link {
+    font-size: 16px;
+    color: #ffffff;
+    text-decoration: underline;
+    transition: color 0.3s ease;
+}
+
+.linksWrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    justify-content: space-between;
+    gap: 20px;
+    margin-right: 0px;
+    margin-right: auto;
+}
+.description {
+    font-size: 16px;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+.role {
+    font-size: 16px;
+    color: #ffffff;
+    margin-bottom: 20px;
 }
 
 .featuresList,
@@ -58,30 +96,39 @@
     display: flex;
     flex-wrap: wrap;
     font-size: 16px;
-}
-.featureItem,
-.toolItem {
-    margin-bottom: 5px;
-    font-size: 12px;
-}
-.showLessButton {
-    background-color: #00baff;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 1rem;
-    border-radius: 5px;
-}
-.showLessButton:hover {
-    background-color: #008bbf;
-}
-.featuresList {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
-.featuresList li,
-.toolsList li {
-    margin-bottom: 10px;
-    font-size: 12px;
+.showLessButton {
+     font-family: 'Courier New', monospace;
+    padding: 16px 32px;
+    display: flex;
+    align-items: center ;
+    justify-content: center ;
+    gap: 20px; 
+    text-align: center;
+    font-size: 0.6rem ;
+  color: #ffffff;
+  cursor: pointer;
+border-radius: 20px;
+border: 1px solid #ffffff;
+  box-shadow: 0 0 10px rgba(240, 237, 237, 0.1),
+    0 0 20px rgba(240, 237, 237, 0.1),
+    0 0 40px rgba(240, 237, 237, 0.1),
+    0 0 80px rgba(240, 237, 237, 0.1);
+}
+.showLessButton:hover {
+     border-color: rgba(153, 69, 232, 0.325);
+    box-shadow:
+      0 0 10px rgba(153, 69, 232, 0.325),
+      0 0 20px rgba(152, 69, 232, 0.1),
+      0 0 40px rgba(152, 69, 232, 0.1),
+      0 0 80px rgba(152, 69, 232, 0.1);
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+.toolIcon {
+    width: 30px;
+    height: 30px;
+    fill: #ffffff;
 }
