--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ html, body {
   margin: 0;
   padding: 0;
   min-height: 100%;
+   /* box-sizing: border-box;
+   scroll-behavior: smooth; */
   overflow-x: hidden;
   overflow-y: auto;
 }
@@ -21,6 +23,11 @@ body {
   font-family: 'Courier New', monospace;
   background: black;
   color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  line-height: 1.5;
+  scrollbar-width: thin;
 }
 
 html,
