--- a/src/components/Projects/ProjectsSection/ProjectsSection.module.css
+++ b/src/components/Projects/ProjectsSection/ProjectsSection.module.css
@@ -12,8 +12,8 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-    padding-top: 50px;
- margin: 100px 0px;
+    padding: 50px 0px;
+ /* margin: 100px 0px; */
 }
 
 @keyframes gradient {
@@ -56,7 +56,7 @@
     height: 400px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 0px 70px 0px 70px;
     background-color: rgba(255, 255, 255, 0.05) !important;
     border: 1px solid rgba(255, 255, 255, 0.08) !important;
@@ -69,14 +69,14 @@
     background-color: transparent;
     justify-content: center;
     align-items: center;
-    padding-left: 20px;
+    /* padding-left: 20px; */
 }
 .rowDirection {
     flex-direction: row;
     width: 730px;
     height: 400px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 25px;
     background-color: transparent;
@@ -89,15 +89,15 @@
     border-radius: 10px;
 }
 .camperClass {
-  width: 630px;
-  padding: 0px 50px;
+  width: 730px;
+  /* padding: 0px 50px; */
     height: 400px;
     object-fit: cover;
     border-radius: 10px;
 }
 .foodClass {
-  padding-left: 50px;
-    width: 680px;
+  /* padding-left: 50px; */
+    width: 730px;
   height: 400px;
     object-fit: cover;
     border-radius: 10px;
@@ -220,13 +220,12 @@ border: 1px solid #ffffff !important;
   
   
 .backdrop {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    overflow: hidden;
 }
 
 
