--- a/src/components/SharedLayout/Container/Container.module.css
+++ b/src/components/SharedLayout/Container/Container.module.css
@@ -2,12 +2,13 @@
 
 .container {
   width: 100%;
+
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 50px;
+  padding: 0 40px;
   position: relative;
   z-index: 10;
-   transform: none !important;
+   /* transform: none !important; */
 }
 
 /* .container::after {
