--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ html, body {
   margin: 0;
   padding: 0;
   min-height: 100%;
-   /* box-sizing: border-box;
-   scroll-behavior: smooth; */
-  overflow-x: hidden;
-  overflow-y: auto;
+   box-sizing: border-box;
+   scroll-behavior: smooth;
+  /* overflow-x: hidden;
+  overflow-y: auto; */
 }
 
 
@@ -27,7 +27,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px;
   line-height: 1.5;
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
 }
 
 html,
